<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_kontrol"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/logo_branca" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:src="@drawable/logo_branca_nome" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/LOGIN_INTRO_BEMVINDO"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/LOGIN_INTRODUCAO"
        android:textAlignment="center"
        android:textColor="@color/cinza_claro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/fundo_branco"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/login_tv_aviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/borda_erro"
            android:backgroundTint="@color/vermelho_claro_kontrol"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/LOGIN_AVISO_INVALIDO"
            android:textColor="@color/vermelho_claro_kontrol"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_atencao_24"
            app:drawableTint="@color/vermelho_claro_kontrol" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:hint="@string/LOGIN_USUARIO"
            android:paddingBottom="14dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="16dp"
            app:boxCornerRadiusBottomStart="16dp"

            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/azul_kontrol"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/azul_kontrol"
            app:startIconDrawable="@drawable/ic_usuario_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_tied_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azul_kontrol"
                android:inputType="text|textShortMessage"

                android:textColor="@color/cinza"
                android:textColorHighlight="@color/azul_claro_kontrol"
                android:textColorLink="@color/azul_kontrol"
                android:textCursorDrawable="@drawable/cursor_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LOGIN_SENHA"
            android:paddingBottom="14dp"

            app:boxCornerRadiusBottomEnd="16dp"

            app:boxCornerRadiusBottomStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:boxCornerRadiusTopStart="16dp"
            app:boxStrokeColor="@color/azul_kontrol"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/azul_kontrol"
            app:startIconDrawable="@drawable/ic_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_tied_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/azul_kontrol"
                android:inputType="textPassword"

                android:textColor="@color/cinza"
                android:textColorHighlight="@color/azul_claro_kontrol"
                android:textColorLink="@color/azul_kontrol"
                android:textCursorDrawable="@drawable/cursor_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_bt_entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_gradient_kontrol"
            android:text="@string/LOGIN_BOTAO_ENTRAR"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/LOGIN_SEM_CADASTRO" />

        <TextView
            android:id="@+id/login_tv_fazer_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LOGIN_CADASTRAR"
            android:textColor="@color/azul_escuro_kontrol"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>